--- a/src/NoteSphere.WebApi/appsettings.Development.json
+++ b/src/NoteSphere.WebApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=NoteSphereTest;Trusted_Connection=True;"
   }
 }
