--- a/src/NoteSphere.Infrastructure/Infrastructure.csproj
+++ b/src/NoteSphere.Infrastructure/Infrastructure.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Persistence\Extensions\" />
     <Folder Include="Persistence\Migrations\" />
   </ItemGroup>
 
