Implementation of email service

--- a/src/NoteSphere.Infrastructure/Infrastructure.csproj
+++ b/src/NoteSphere.Infrastructure/Infrastructure.csproj
@@ -9,10 +9,10 @@
 
   <ItemGroup>
     <Folder Include="Persistence\Extensions\" />
-    <Folder Include="Persistence\Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
