FluentValidation implementation and refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -373,6 +373,9 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 
+# Migrations
+Migrations/
+
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
@@ -475,3 +478,5 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+src/NoteSphere.Infrastructure/Persistence/Migrations/
+tests/
